# azure-openai-evals

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
deployments/: gpt4o-eastus-prod.json  gpt4o-mini-bulk.json  gpt4o-westeurope-failover.json
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: gpt4o-eastus-prod.json  gpt4o-mini-bulk.json  gpt4o-westeurope-failover.json
examples/: preflight_gate.py  walkthrough.md
src/aoai_evals/: __init__.py  cli.py  deployment.py  evaluator.py  runner.py
tests/: test_deployment.py  test_evaluator.py  test_runner.py
